# mhws-sound-modder

./: .gitignore  .prettierrc  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.mts  vite.config.ts
docs/: UserManual.md  UserManualZhCN.md
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json
src-tauri/src/: command.rs  event.rs  lib.rs  logger.rs  loudness.rs  main.rs
src-tauri/src/service/: mod.rs  transcode.rs
src-tauri/src/subprocess/: ffmpeg.rs  mod.rs  vgmstream.rs  wwise.rs
src/api/: tauri.ts
src/components/: AudioPlayer.vue  DragOverTree.vue  InfoPanel.vue  LabelNumberInput.vue  NumberInput.vue  SliderWithInput.vue  SplitPanel.vue  StatusBar.vue  Toolbar.vue
src/libs/: bnk.ts  localDir.ts  pck.ts  source.ts  transcode.ts  workspaceCore.ts
src/models/: README.md  pck.ts
src/models/bnk/: index.ts
src/models/bnk/hirc/: common.ts  index.ts  music_ran_sec_cntr.ts  music_ran_seq_cntr.ts  music_segment.ts  music_track.ts
src/pages/: index.vue
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/stores/: config.ts  status.ts  workspace.ts
src/utils/: index.ts  logger.md  logger.ts  path.ts
