[package]
name = "mhws-sound-modder"
version = "0.1.0"
description = "MHWs Sound Modding Tool"
authors = ["Eigeen <dengyk2002@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mhws_sound_modder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

re-sound = { git = "https://github.com/eigeen/re-sound.git", tag = "v0.2.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4.27", features = ["std"] }
eyre = "0.6.12"
tauri-plugin-dialog = "2"
thiserror = "2.0.12"
tauri-plugin-fs = "2"
parking_lot = "0.12.4"
indexmap = "2.9.0"
